--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.2",
@@ -27,7 +29,6 @@
     "@vitest/ui": "^3.2.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.37.0",
-    "@eslint/js": "^9.37.0",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.4.0",
