--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "prep": "npm run build && npm run dev",
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "@types/leaflet": "^1.9.21",
+    "firebase": "^12.6.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
