--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,9 @@ jobs:
   build:
     name: Build and unit test
     runs-on: ubuntu-latest
+    env:
+      VITE_MAPBOX_ACCESS_TOKEN: ${{ secrets.VITE_MAPBOX_ACCESS_TOKEN }}
+      VITE_SHELTER_API_KEY: ${{ secrets.VITE_SHELTER_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -19,6 +22,9 @@ jobs:
     name: Firebase deploy
     needs: [build]
     runs-on: ubuntu-latest
+    env:
+      VITE_MAPBOX_ACCESS_TOKEN: ${{ secrets.VITE_MAPBOX_ACCESS_TOKEN }}
+      VITE_SHELTER_API_KEY: ${{ secrets.VITE_SHELTER_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
@@ -28,4 +34,3 @@ jobs:
       - run: npm run build
       - run: npm install -g firebase-tools
       - run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
-
